@@ -11,15 +11,16 @@ our @EXPORT_OK = qw/sigaction/;
 
 use Config;
 use IPC::Signal qw/sig_num sig_name/;
+use Scalar::Util 'blessed';
 use List::Util 'reduce';
-use POSIX qw/SA_SIGINFO/;
+use POSIX ();
 use Signal::Info;
 
 {
 	no warnings 'once';
 	tie %Signal::Unsafe, __PACKAGE__;
 }
-our $Flags = SA_SIGINFO;
+our $Flags = POSIX::SA_SIGINFO;
 our $Mask  = POSIX::SigSet->new;
 
 my $sig_max = $Config{sig_count} - 1;
@@ -52,23 +53,24 @@ my %flag_values = (
 	nocldwait => POSIX::SA_NOCLDWAIT,
 );
 
-sub get_args {
+sub make_action {
 	my $value = shift;
-	if (ref $value eq 'ARRAY') {
+	if (blessed($value) && $value->isa('POSIX::SigAction')) {
+		return $value;
+	} elsif (ref $value eq 'ARRAY') {
 		my ($handler, $flags, $mask) = @{$value};
 		$mask = $Mask if not defined $mask;
 		$flags = not defined $flags ? $Flags : ref($flags) ne 'ARRAY' ? $flags : reduce { $a | $b } map { $flag_values{$_} } @{$flags};
-		return ($handler, $mask, $flags);
+		return POSIX::SigAction->new($handler, $mask, $flags);
 	}
 	else {
-		return ($value, $Flags, $Mask);
+		return POSIX::SigAction->new($value, $Mask, $Flags);
 	}
 }
 
 sub STORE {
 	my ($self, $key, $value) = @_;
-	my ($handler, $flags, $mask) = get_args($value);
-	sigaction(sig_num($key), POSIX::SigAction->new($handler, $mask, $flags));
+	sigaction(sig_num($key), make_action($value));
 	return;
 }
 
@@ -178,6 +180,8 @@ This hash contains handlers for signals. It accepts various values:
 =item * nocldwait
 
 =back
+
+=item * If a C<POSIX::SigAction> object is written to is, it will be used as-is.
 
 =item * If an undefined value is written to it, the handler is reset to default.
 
