@@ -3,6 +3,7 @@ Revision history for Signal-Unsafe
 {{$NEXT}}
           - Make second signal handler argument a Signal::Info object
           - Make third signal handler argument an opaque pointer
+          - Allow POSIX::SigAction objects as hash value
 
 0.006     2014-08-28 14:51:59+02:00 Europe/Amsterdam
           Export sigaction optionally
